--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
-iniconfig==2.1.0
-packaging==25.0
-pluggy==1.6.0
-pytest==8.3.5
-setuptools==78.1.1
+filelock==3.17.0
+fsspec==2025.2.0
+Jinja2==3.1.6
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.4.2
+setuptools==75.8.0
+sympy==1.13.1
+torch==2.6.0
+typing_extensions==4.12.2
 wheel==0.45.1
