--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,48 @@
+absl-py==2.3.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.2
+aiosignal==1.3.2
+attrs==25.3.0
+docstring_parser==0.16
+filelock==3.18.0
+frozenlist==1.6.0
+fsspec==2025.5.1
+grpcio==1.71.0
+idna==3.10
+importlib_resources==6.5.2
 iniconfig==2.1.0
-packaging==25.0
+Jinja2==3.1.6
+jsonargparse==4.40.0
+lightning==2.5.1.post0
+lightning-utilities==0.14.3
+line_profiler==4.2.0
+llvmlite==0.44.0
+Markdown==3.8
+MarkupSafe==3.0.2
+mpmath==1.3.0
+multidict==6.4.4
+networkx==3.4.2
+numba==0.61.2
+numpy==2.2.6
+packaging==24.2
+pillow==11.2.1
 pluggy==1.6.0
+propcache==0.3.1
+protobuf==6.31.0
 pytest==8.3.5
+pytorch-lightning==2.5.1.post0
+PyYAML==6.0.2
 setuptools==78.1.1
+six==1.17.0
+sympy==1.14.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+torch==2.7.0
+torchmetrics==1.7.1
+torchvision==0.22.0
+tqdm==4.67.1
+typeshed_client==2.7.0
+typing_extensions==4.13.2
+Werkzeug==3.1.3
 wheel==0.45.1
+yarl==1.20.0
